Closed
Bug 122282
Opened 24 years ago
Closed 23 years ago
Import file dialog: files with .ldif/.txt/.tab extension are not listed when corresponding file types are specified.
Categories
(SeaMonkey :: MailNews: Address Book & Contacts, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
mozilla1.3final
People
(Reporter: ji, Assigned: pkwarren)
References
Details
(Whiteboard: nab-imp)
Attachments
(3 files, 1 obsolete file)
|
13.22 KB,
image/gif
|
Details | |
|
12.79 KB,
image/gif
|
Details | |
|
2.46 KB,
patch
|
sspitzer
:
review+
sspitzer
:
superreview+
sspitzer
:
approval1.3+
|
Details | Diff | Splinter Review |
Build: 01/28 linux build
On Improt file dialog, when specifying file types as .ldif/.txt/.tab, files with
these extensions in the directory are not listed on the window.
Steps to reproduce:
0. Have some files with .ldif/.txt/.tab extension in a directory that you can
access.
1. Launch ABook.
2. Selct File | Import.
3. Select Address Book and click on Next.
4. Select Text file and click on Next
5. Select the directory that holds the files with .ldif/.txt/.tab extension
6. Select .ldif as the file type, the file with .ldif in the directory is not
listed. Same problem when selecting .tab/.txt as the file type. It doesn't
happen when selecting .csv or All files as the file type.
I don't see this on widnows build.
Comment 1•24 years ago
|
||
Marking nsbeta1 since I can't see any ldif,txt or csv files in the import dialog.
Keywords: nsbeta1
Whiteboard: nab-imp
Updated•24 years ago
|
*** Bug 131690 has been marked as a duplicate of this bug. ***
Comment 3•24 years ago
|
||
*** Bug 139200 has been marked as a duplicate of this bug. ***
Comment 4•24 years ago
|
||
Workaround: Choose to see "All files" and then you should be able to see the files.
Comment 5•24 years ago
|
||
It seems that the seperator for file extensions should be ';' and not ','. (Just
to be consistent)
Also the extension-list is appearing twice for me (as opposed to only once in
the other filepicker dialogs where the filtering is working).
Comment 6•23 years ago
|
||
I get the same behavior when using Mozilla 1.0 (Build 2002052918) on Mandrake
Linux 8.2. I can see .ldi files (and .csv files) but not .ldif files. This
occurs with the Import and Export file selection dialogue. Also, selecting Tab
Delimited does not show .txt files, even though that is listed as an option --
only .tab files are shown.
I also see the same thing as Roland... all the extensions are listed twice in
the drop-down menu where you select ldif, csv, tab, or all files.
Looks like Bug 144791 is a duplicate of this bug.
Comment 7•23 years ago
|
||
Marking nsbeta1 because this is totally confusing. Please fix this so that the
import dialog can display the import files on the system.
Comment 8•23 years ago
|
||
*** Bug 158201 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 10•23 years ago
|
||
Taking ownership of bug.
Assignee: racham → pkw
Status: ASSIGNED → NEW
| Assignee | ||
Comment 11•23 years ago
|
||
This fixes two issues in the code.
1) AppendFilter expects extensions to be separated by a semicolon and a space -
see http://lxr.mozilla.org/seamonkey/source/widget/public/nsIFilePicker.idl#69
. I have changed the code so it separates the extensions by spaces in two
places - import and export. This should fix both problems.
2) Remove the extensions from the addressbook.properties file because it causes
the extensions to show up twice for builds using the nsFilepicker.js file
picker (UNIX). See comment 5.
| Assignee | ||
Updated•23 years ago
|
Attachment #113404 -
Flags: review?(sspitzer)
| Assignee | ||
Comment 12•23 years ago
|
||
*** Bug 152170 has been marked as a duplicate of this bug. ***
Comment 13•23 years ago
|
||
thanks philip, and sorry for the delay.
let me try the patch out on win32, to verify that it works properly there, and
then I'll quickly r/sr.
Comment 14•23 years ago
|
||
here's how win32 looks (for ab import) without the fix.
win32 works as is, but from pkw's comment, linux doesn't.
his patch now, and see if win32 still works.
Comment 15•23 years ago
|
||
screen shot after the fix.
so my problem is that the change to addressBook.properties fixes a problem on
linux ("Remove the extensions from the addressbook.properties file because it
causes the extensions to show up twice for builds using the nsFilepicker.js
file
picker (UNIX") but causes a new one on win32 ("extensions not appearing")
this seems like a general problem that should happen with other users of
nsFilepicker.js, or a problem with the mailnews code that we shouldn't be
specifying the extensions like that.
I'd rather land part of this fix, and move the other part to a new bug.
Comment 16•23 years ago
|
||
let's spin the addressbook.properties change off to another bug.
Attachment #113404 -
Attachment is obsolete: true
Comment 17•23 years ago
|
||
Comment on attachment 113767 [details] [diff] [review]
pkw's patch, without the change to addressbook.properties
r/sr=sspitzer on this part of pkw's patch
Attachment #113767 -
Flags: superreview+
Attachment #113767 -
Flags: review+
Attachment #113767 -
Flags: approval1.3b?
Comment 18•23 years ago
|
||
hoping asa will a= this change for 1.3 beta, but not a 1.3 beta blocker.
if not 1.3 beta, then 1.3 final for sure.
Status: NEW → ASSIGNED
Target Milestone: mozilla1.2alpha → mozilla1.3final
Comment 19•23 years ago
|
||
Comment on attachment 113767 [details] [diff] [review]
pkw's patch, without the change to addressbook.properties
Let's hold this till we open for 1.3final. Thanks.
Attachment #113767 -
Flags: approval1.3b? → approval1.3b-
Comment 20•23 years ago
|
||
Comment on attachment 113767 [details] [diff] [review]
pkw's patch, without the change to addressbook.properties
asa says (over irc) a=asa for 1.3 final, but wait until the tree is ready for
1.3 final checkins.
Attachment #113767 -
Flags: approval1.3b- → approval1.3+
Comment 21•23 years ago
|
||
fixed. thanks for the fix, philip.
I've spin off the issue in comment #15 into a new bug.
see bug #192666
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Updated•23 years ago
|
Attachment #113404 -
Flags: review?(sspitzer) → review-
Updated•21 years ago
|
Product: Browser → Seamonkey
You need to log in
before you can comment on or make changes to this bug.
Description
•