fix for bug #122282. files with .ldif/.txt/.tab extension are not listed when corresponding file types are specified. thanks to pkw@us.ibm.com for the fix.  r/sr=sspitzer, a=asa